feat(protocol): Phase 6 — Cancel Order wire format aligned to spec v2.11.90
Rewrite CancelOrderMessage parser/serializer to match Table 36 (p.74):
- OrigClOrdID 20B NUL-padded (all-zero = mass cancel)
- 2-byte bitfield map: bf1 covers ClearingFirm, MassCancelLockout, MassCancel,
  RiskRoot, MassCancelId, RoutingFirmID, ManualOrderIndicator, OperatorId;
  bf2 covers MassCancelInst, Symbol, SendTime
- Alpha fields space-padded; Text fields NUL-padded
- isMassCancel(), getMassCancelType(), isLockoutRequested() helpers
- 29 new tests in CancelOrderMessageTest; 295/295 passing