@@ -3,81 +3,119 @@ package com.boe.simulator.protocol.message;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 
+/**
+ * Cancel Order — Table 36 (p.74), spec v2.11.90
+ * Member→Cboe inbound message. MessageType = 0x39.
+ *
+ * Fixed layout (31 bytes minimum):
+ *   [0]   StartOfMessage              2B Binary
+ *   [2]   MessageLength               2B Binary
+ *   [4]   MessageType                 1B = 0x39
+ *   [5]   MatchingUnit                1B (always 0 for inbound)
+ *   [6]   SequenceNumber              4B Binary LE
+ *   [10]  OrigClOrdID                 20B Text (NUL-padded; all-zero = mass cancel)
+ *   [30]  NumberOfCancelOrderBitfields 1B
+ *   [31]  CancelOrderBitfield¹        1B (if NumberOfBitfields > 0)
+ *   ...   Optional fields
+ *
+ * Bitfield map (p.175):
+ *   Byte 1: 0x01=ClearingFirm(4B,Alpha), 0x02=MassCancelLockout(1B),
+ *           0x04=MassCancel(1B), 0x08=RiskRoot(6B,Text),
+ *           0x10=MassCancelId(20B,Text), 0x20=RoutingFirmID(4B,Alpha),
+ *           0x40=ManualOrderIndicator(1B), 0x80=OperatorId(4B,Alpha)
+ *   Byte 2: 0x01=MassCancelInst(16B,Text), 0x02=Symbol(8B,Alpha),
+ *           0x04=SymbolSfx(reserved), 0x08=SendTime(8B,Binary)
+ */
 public final class CancelOrderMessage extends BoeProtocolMessage {
     private static final byte MESSAGE_TYPE = 0x39;
-    private static final byte START_OF_MESSAGE_1 = (byte) 0xBA;
-    private static final byte START_OF_MESSAGE_2 = (byte) 0xBA;
+    private static final byte SOM1 = (byte) 0xBA;
+    private static final byte SOM2 = (byte) 0xBA;
+    private static final int FIXED_SIZE = 31; // before bitfields/optional
 
     // Header
     private byte matchingUnit;
     private int sequenceNumber;
 
     // Required fields
-    private String origClOrdID;       // 20 bytes - ClOrdID de la orden a cancelar
+    private String origClOrdID;     // 20B Text, NUL-padded; empty = mass cancel
 
-    // Optional fields (controlled by bitfields)
+    // Bitfields
     private int numberOfBitfields;
     private byte[] bitfields;
 
-    private String clearingFirm;      // 4 bytes
-    private String riskRoot;          // 6 bytes - For mass cancel
-    private String massCancelId;      // 20 bytes - For mass cancel acknowledgment
-    private String massCancelInst;    // 16 bytes - Mass cancel instructions
-    private long sendTime;            // 8 bytes - Timestamp (nanoseconds)
+    // Optional — Byte 1
+    private String clearingFirm;         // 4B Alpha
+    private byte massCancelLockout;      // 1B Alphanumeric
+    private byte massCancel;             // 1B Alphanumeric
+    private String riskRoot;             // 6B Text
+    private String massCancelId;         // 20B Text
+    private String routingFirmID;        // 4B Alpha
+    private byte manualOrderIndicator;   // 1B Alphanumeric
+    private String operatorId;           // 4B Alpha
 
-    public CancelOrderMessage() {
-    }
+    // Optional — Byte 2
+    private String massCancelInst;       // 16B Text
+    private String symbol;               // 8B Alphanumeric
+    private long sendTime;               // 8B Binary
+
+    public CancelOrderMessage() {}
 
     public CancelOrderMessage(String origClOrdID) {
         this.origClOrdID = origClOrdID;
         this.numberOfBitfields = 0;
+        this.bitfields = new byte[0];
     }
 
     public static CancelOrderMessage parse(byte[] data) {
-        if (data == null || data.length < 31) throw new IllegalArgumentException("Invalid CancelOrder message data");
+        if (data == null || data.length < FIXED_SIZE)
+            throw new IllegalArgumentException("Invalid CancelOrder data: too short");
 
         CancelOrderMessage msg = new CancelOrderMessage();
-        ByteBuffer buffer = ByteBuffer.wrap(data).order(ByteOrder.LITTLE_ENDIAN);
+        ByteBuffer buf = ByteBuffer.wrap(data).order(ByteOrder.LITTLE_ENDIAN);
 
-        // Skip StartOfMessage (2 bytes)
-        buffer.position(2);
+        buf.position(4); // skip SOM(2) + MsgLen(2)
 
-        // MessageLength (2 bytes)
-        @SuppressWarnings("unused")
-        int messageLength = buffer.getShort() & 0xFFFF;
+        byte messageType = buf.get();
+        if (messageType != MESSAGE_TYPE)
+            throw new IllegalArgumentException(
+                "Invalid message type: expected 0x39, got 0x" + String.format("%02X", messageType));
 
-        // MessageType (1 byte)
-        byte messageType = buffer.get();
-        if (messageType != MESSAGE_TYPE) {
-            throw new IllegalArgumentException("Invalid message type: expected 0x39, got 0x" + String.format("%02X", messageType));
-        }
+        msg.matchingUnit = buf.get();
+        msg.sequenceNumber = buf.getInt();
 
-        // MatchingUnit (1 byte)
-        msg.matchingUnit = buffer.get();
+        byte[] origBytes = new byte[20];
+        buf.get(origBytes);
+        msg.origClOrdID = stripNul(origBytes);
 
-        // SequenceNumber (4 bytes)
-        msg.sequenceNumber = buffer.getInt();
+        msg.numberOfBitfields = buf.get() & 0xFF;
+        msg.bitfields = new byte[msg.numberOfBitfields];
+        if (msg.numberOfBitfields > 0) buf.get(msg.bitfields);
 
-        // OrigClOrdID (20 bytes)
-        byte[] origClOrdIDBytes = new byte[20];
-        buffer.get(origClOrdIDBytes);
-        msg.origClOrdID = new String(origClOrdIDBytes, StandardCharsets.US_ASCII).trim();
-
-        // NumberOfBitfields (1 byte)
-        msg.numberOfBitfields = buffer.get() & 0xFF;
-
-        // Bitfields
-        if (msg.numberOfBitfields > 0) {
-            msg.bitfields = new byte[msg.numberOfBitfields];
-            buffer.get(msg.bitfields);
-
-            // Parse optional fields
-            msg.parseOptionalFields(buffer);
-        }
-
+        msg.parseOptionalFields(buf);
         return msg;
+    }
+
+    private void parseOptionalFields(ByteBuffer buf) {
+        if (numberOfBitfields < 1) return;
+        byte bf1 = bitfields[0];
+
+        if ((bf1 & 0x01) != 0) { byte[] b = new byte[4]; buf.get(b); clearingFirm = stripSpace(b); }
+        if ((bf1 & 0x02) != 0) massCancelLockout = buf.get();
+        if ((bf1 & 0x04) != 0) massCancel = buf.get();
+        if ((bf1 & 0x08) != 0) { byte[] b = new byte[6]; buf.get(b); riskRoot = stripNul(b); }
+        if ((bf1 & 0x10) != 0) { byte[] b = new byte[20]; buf.get(b); massCancelId = stripNul(b); }
+        if ((bf1 & 0x20) != 0) { byte[] b = new byte[4]; buf.get(b); routingFirmID = stripSpace(b); }
+        if ((bf1 & 0x40) != 0) manualOrderIndicator = buf.get();
+        if ((bf1 & 0x80) != 0) { byte[] b = new byte[4]; buf.get(b); operatorId = stripSpace(b); }
+
+        if (numberOfBitfields < 2) return;
+        byte bf2 = bitfields[1];
+
+        if ((bf2 & 0x01) != 0) { byte[] b = new byte[16]; buf.get(b); massCancelInst = stripNul(b); }
+        if ((bf2 & 0x02) != 0) { byte[] b = new byte[8]; buf.get(b); symbol = stripSpace(b); }
+        // 0x04 = SymbolSfx (reserved — skip if present; size unknown, assume 0 in practice)
+        if ((bf2 & 0x08) != 0) sendTime = buf.getLong();
     }
 
     @Override
@@ -85,167 +123,117 @@ public final class CancelOrderMessage extends BoeProtocolMessage {
 
     @Override
     public byte[] toBytes() {
-        // Calculate size
-        int baseSize = 2 + 2 + 1 + 1 + 4 + 20 + 1; // Header + OrigClOrdID + NumberOfBitfields
-        int optionalSize = calculateOptionalSize();
-        int totalSize = baseSize + numberOfBitfields + optionalSize;
+        int optSize = optionalSize();
+        int totalSize = FIXED_SIZE + numberOfBitfields + optSize;
 
-        ByteBuffer buffer = ByteBuffer.allocate(totalSize);
-        buffer.order(ByteOrder.LITTLE_ENDIAN);
+        ByteBuffer buf = ByteBuffer.allocate(totalSize).order(ByteOrder.LITTLE_ENDIAN);
 
-        // StartOfMessage
-        buffer.put(START_OF_MESSAGE_1);
-        buffer.put(START_OF_MESSAGE_2);
+        buf.put(SOM1); buf.put(SOM2);
+        buf.putShort((short) (totalSize - 2));
+        buf.put(MESSAGE_TYPE);
+        buf.put(matchingUnit);
+        buf.putInt(sequenceNumber);
+        putText(buf, origClOrdID, 20);
+        buf.put((byte) numberOfBitfields);
+        if (numberOfBitfields > 0) buf.put(bitfields, 0, numberOfBitfields);
 
-        // MessageLength
-        buffer.putShort((short)(totalSize - 2));
-
-        // MessageType
-        buffer.put(MESSAGE_TYPE);
-
-        // MatchingUnit
-        buffer.put(matchingUnit);
-
-        // SequenceNumber
-        buffer.putInt(sequenceNumber);
-
-        // OrigClOrdID (20 bytes)
-        buffer.put(toFixedLengthBytes(origClOrdID, 20));
-
-        // NumberOfBitfields
-        buffer.put((byte)numberOfBitfields);
-
-        // Bitfields (if any)
-        if (numberOfBitfields > 0 && bitfields != null) {
-            buffer.put(bitfields);
-
-            // Optional fields in order
-            writeOptionalFields(buffer);
-        }
-
-        return buffer.array();
+        writeOptionalFields(buf);
+        return buf.array();
     }
 
-    private void parseOptionalFields(ByteBuffer buffer) {
-        if (numberOfBitfields == 0) return;
+    private void writeOptionalFields(ByteBuffer buf) {
+        if (numberOfBitfields < 1) return;
+        byte bf1 = bitfields[0];
 
-        // Bitfield 1
-        if (bitfields.length >= 1) {
-            byte bf1 = bitfields[0];
+        if ((bf1 & 0x01) != 0) putAlpha(buf, clearingFirm, 4);
+        if ((bf1 & 0x02) != 0) buf.put(massCancelLockout);
+        if ((bf1 & 0x04) != 0) buf.put(massCancel);
+        if ((bf1 & 0x08) != 0) putText(buf, riskRoot, 6);
+        if ((bf1 & 0x10) != 0) putText(buf, massCancelId, 20);
+        if ((bf1 & 0x20) != 0) putAlpha(buf, routingFirmID, 4);
+        if ((bf1 & 0x40) != 0) buf.put(manualOrderIndicator);
+        if ((bf1 & 0x80) != 0) putAlpha(buf, operatorId, 4);
 
-            // Bit 0: ClearingFirm
-            if ((bf1 & 0x01) != 0) {
-                byte[] cfBytes = new byte[4];
-                buffer.get(cfBytes);
-                clearingFirm = new String(cfBytes, StandardCharsets.US_ASCII).trim();
-            }
+        if (numberOfBitfields < 2) return;
+        byte bf2 = bitfields[1];
 
-            // Bit 3: RiskRoot
-            if ((bf1 & 0x08) != 0) {
-                byte[] rrBytes = new byte[6];
-                buffer.get(rrBytes);
-                riskRoot = new String(rrBytes, StandardCharsets.US_ASCII).trim();
-            }
-
-            // Bit 4: MassCancelId
-            if ((bf1 & 0x10) != 0) {
-                byte[] mcIdBytes = new byte[20];
-                buffer.get(mcIdBytes);
-                massCancelId = new String(mcIdBytes, StandardCharsets.US_ASCII).trim();
-            }
-        }
-
-        // Bitfield 2
-        if (bitfields.length >= 2) {
-            byte bf2 = bitfields[1];
-
-            // Bit 0: MassCancelInst
-            if ((bf2 & 0x01) != 0) {
-                byte[] mcInstBytes = new byte[16];
-                buffer.get(mcInstBytes);
-                massCancelInst = new String(mcInstBytes, StandardCharsets.US_ASCII).trim();
-            }
-
-            // Bit 3: SendTime
-            if ((bf2 & 0x08) != 0) sendTime = buffer.getLong();
-        }
+        if ((bf2 & 0x01) != 0) putText(buf, massCancelInst, 16);
+        if ((bf2 & 0x02) != 0) putAlpha(buf, symbol, 8);
+        if ((bf2 & 0x08) != 0) buf.putLong(sendTime);
     }
 
-    private void writeOptionalFields(ByteBuffer buffer) {
-        if (bitfields.length >= 1) {
-            // Bit 0: ClearingFirm
-            if ((bitfields[0] & 0x01) != 0 && clearingFirm != null) buffer.put(toFixedLengthBytes(clearingFirm, 4));
-            
-            // Bit 3: RiskRoot
-            if ((bitfields[0] & 0x08) != 0 && riskRoot != null) buffer.put(toFixedLengthBytes(riskRoot, 6));
-            
-            // Bit 4: MassCancelId
-            if ((bitfields[0] & 0x10) != 0 && massCancelId != null) buffer.put(toFixedLengthBytes(massCancelId, 20));
-        }
-
-        if (bitfields.length >= 2) {
-            // Bit 0 of bitfield 2: MassCancelInst
-            if ((bitfields[1] & 0x01) != 0 && massCancelInst != null) buffer.put(toFixedLengthBytes(massCancelInst, 16));
-
-            // Bit 3 of bitfield 2: SendTime
-            if ((bitfields[1] & 0x08) != 0) buffer.putLong(sendTime);
-        }
-    }
-
-    private int calculateOptionalSize() {
+    private int optionalSize() {
+        if (numberOfBitfields < 1) return 0;
         int size = 0;
-        if (bitfields == null || bitfields.length == 0) return size;
+        byte bf1 = bitfields[0];
+        if ((bf1 & 0x01) != 0) size += 4;
+        if ((bf1 & 0x02) != 0) size += 1;
+        if ((bf1 & 0x04) != 0) size += 1;
+        if ((bf1 & 0x08) != 0) size += 6;
+        if ((bf1 & 0x10) != 0) size += 20;
+        if ((bf1 & 0x20) != 0) size += 4;
+        if ((bf1 & 0x40) != 0) size += 1;
+        if ((bf1 & 0x80) != 0) size += 4;
 
-        if ((bitfields[0] & 0x01) != 0) size += 4;  // ClearingFirm
-        if ((bitfields[0] & 0x08) != 0) size += 6;  // RiskRoot
-        if ((bitfields[0] & 0x10) != 0) size += 20; // MassCancelId
-
-        if (bitfields.length >= 2) {
-            if ((bitfields[1] & 0x01) != 0) size += 16; // MassCancelInst
-            if ((bitfields[1] & 0x08) != 0) size += 8;  // SendTime
-        }
-
+        if (numberOfBitfields < 2) return size;
+        byte bf2 = bitfields[1];
+        if ((bf2 & 0x01) != 0) size += 16;
+        if ((bf2 & 0x02) != 0) size += 8;
+        if ((bf2 & 0x08) != 0) size += 8;
         return size;
     }
 
-    private byte[] toFixedLengthBytes(String str, int length) {
-        byte[] result = new byte[length];
-        Arrays.fill(result, (byte) 0x20);
-
-        if (str != null && !str.isEmpty()) {
-            byte[] strBytes = str.getBytes(StandardCharsets.US_ASCII);
-            int copyLength = Math.min(strBytes.length, length);
-            System.arraycopy(strBytes, 0, result, 0, copyLength);
+    // Text fields: NUL-padded (0x00)
+    private static void putText(ByteBuffer buf, String s, int len) {
+        byte[] bytes = new byte[len];
+        if (s != null && !s.isEmpty()) {
+            byte[] src = s.getBytes(StandardCharsets.US_ASCII);
+            System.arraycopy(src, 0, bytes, 0, Math.min(src.length, len));
         }
+        buf.put(bytes);
+    }
 
-        return result;
+    // Alphanumeric fields: space-padded (0x20)
+    private static void putAlpha(ByteBuffer buf, String s, int len) {
+        byte[] bytes = new byte[len];
+        java.util.Arrays.fill(bytes, (byte) 0x20);
+        if (s != null && !s.isEmpty()) {
+            byte[] src = s.getBytes(StandardCharsets.US_ASCII);
+            System.arraycopy(src, 0, bytes, 0, Math.min(src.length, len));
+        }
+        buf.put(bytes);
+    }
+
+    private static String stripNul(byte[] b) {
+        int end = b.length;
+        while (end > 0 && b[end - 1] == 0) end--;
+        return new String(b, 0, end, StandardCharsets.US_ASCII);
+    }
+
+    private static String stripSpace(byte[] b) {
+        return new String(b, StandardCharsets.US_ASCII).stripTrailing();
     }
 
     public boolean isMassCancel() {
-        return origClOrdID == null || origClOrdID.isEmpty() ||origClOrdID.replaceAll("\u0000", "").trim().isEmpty();
-    }
-
-    public void setOrigClOrdID(String origClOrdID) {
-        this.origClOrdID = origClOrdID;
+        return origClOrdID == null || origClOrdID.isBlank();
     }
 
     public MassCancelType getMassCancelType() {
         if (massCancelInst == null || massCancelInst.isEmpty()) return MassCancelType.NONE;
-        
-        char firstChar = massCancelInst.charAt(0);
-        return switch (firstChar) {
-            case 'F' -> MassCancelType.FIRM;           // Cancel by clearing firm
-            case 'S' -> MassCancelType.SYMBOL;         // Cancel by symbol
-            case 'M' -> MassCancelType.MARKETMAKER;    // Cancel market maker orders
-            case 'C' -> MassCancelType.CUSTOMER;       // Cancel customer orders
-            case 'A' -> MassCancelType.ALL;            // Cancel all orders
-            default -> MassCancelType.NONE;
+        return switch (massCancelInst.charAt(0)) {
+            case 'F' -> MassCancelType.FIRM;
+            case 'S' -> MassCancelType.SYMBOL;
+            case 'M' -> MassCancelType.MARKETMAKER;
+            case 'C' -> MassCancelType.CUSTOMER;
+            case 'A' -> MassCancelType.ALL;
+            default  -> MassCancelType.NONE;
         };
     }
 
+    // Lockout instruction = 3rd character of MassCancelInst (per spec p.204)
     public boolean isLockoutRequested() {
-        if (massCancelInst == null || massCancelInst.length() < 3) return false;
-        return massCancelInst.charAt(2) == 'L';
+        return massCancelInst != null && massCancelInst.length() >= 3
+                && massCancelInst.charAt(2) == 'L';
     }
 
     // Getters
@@ -256,49 +244,32 @@ public final class CancelOrderMessage extends BoeProtocolMessage {
     public String getRiskRoot() { return riskRoot; }
     public String getMassCancelId() { return massCancelId; }
     public String getMassCancelInst() { return massCancelInst; }
+    public String getRoutingFirmID() { return routingFirmID; }
+    public String getOperatorId() { return operatorId; }
+    public String getSymbol() { return symbol; }
     public long getSendTime() { return sendTime; }
 
     // Setters
-    public void setMatchingUnit(byte matchingUnit) {
-        this.matchingUnit = matchingUnit;
-    }
-
-    public void setSequenceNumber(int sequenceNumber) {
-        this.sequenceNumber = sequenceNumber;
-    }
-
-    public void setClearingFirm(String clearingFirm) {
-        this.clearingFirm = clearingFirm;
-    }
-
-    public void setRiskRoot(String riskRoot) {
-        this.riskRoot = riskRoot;
-    }
-
-    public void setMassCancelId(String massCancelId) {
-        this.massCancelId = massCancelId;
-    }
-
-    public void setMassCancelInst(String massCancelInst) {
-        this.massCancelInst = massCancelInst;
-    }
-
-    public void setSendTime(long sendTime) {
-        this.sendTime = sendTime;
-    }
+    public void setMatchingUnit(byte matchingUnit) { this.matchingUnit = matchingUnit; }
+    public void setSequenceNumber(int sequenceNumber) { this.sequenceNumber = sequenceNumber; }
+    public void setOrigClOrdID(String origClOrdID) { this.origClOrdID = origClOrdID; }
+    public void setClearingFirm(String clearingFirm) { this.clearingFirm = clearingFirm; }
+    public void setRiskRoot(String riskRoot) { this.riskRoot = riskRoot; }
+    public void setMassCancelId(String massCancelId) { this.massCancelId = massCancelId; }
+    public void setMassCancelInst(String massCancelInst) { this.massCancelInst = massCancelInst; }
+    public void setRoutingFirmID(String routingFirmID) { this.routingFirmID = routingFirmID; }
+    public void setSymbol(String symbol) { this.symbol = symbol; }
+    public void setSendTime(long sendTime) { this.sendTime = sendTime; }
 
     @Override
     public String toString() {
-        if (isMassCancel()) return "CancelOrder{MASS CANCEL: firm='" + clearingFirm + "', root='" + riskRoot +"', type=" + getMassCancelType() + ", lockout=" + isLockoutRequested() + "}";
-        else return "CancelOrder{origClOrdID='" + origClOrdID + "'}";
+        if (isMassCancel())
+            return "CancelOrder{MASS: firm='" + clearingFirm + "', root='" + riskRoot
+                    + "', type=" + getMassCancelType() + ", lockout=" + isLockoutRequested() + "}";
+        return "CancelOrder{origClOrdID='" + origClOrdID + "'}";
     }
 
     public enum MassCancelType {
-        NONE,
-        FIRM,       // Cancel by clearing firm
-        SYMBOL,     // Cancel by symbol
-        MARKETMAKER,
-        CUSTOMER,
-        ALL
+        NONE, FIRM, SYMBOL, MARKETMAKER, CUSTOMER, ALL
     }
 }
